fix: 添加@SuppressWarnings("unchecked")注解并重构UnsafeUtil
- 在多个类中添加@SuppressWarnings("unchecked")注解以消除类型转换警告
- 重构UnsafeUtil类，使用MethodHandle替代直接调用Unsafe方法

fix: add @SuppressWarnings("unchecked") annotation and refactor UnsafeUtil

- Add @SuppressWarnings("unchecked") annotation across multiple classes to eliminate type conversion warnings
- Refactor UnsafeUtil class to use MethodHandle instead of directly calling Unsafe methods